Prevent micro-shifts caused by scrollbar presence

--- a/ssg/styles/main.css
+++ b/ssg/styles/main.css
@@ -6,6 +6,7 @@
 
 html {
 	height: 100%;
+	scrollbar-gutter: stable;
 }
 
 body {
